--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9fe38cb6-9a05-4b82-8f75-78d207f639a6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import glob\n",
+    "import time\n",
+    "\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from bs4 import BeautifulSoup\n",
+    "pd.set_option('display.max_columns', 100)\n",
     "\n",
-    "pd.set_option('display.max_columns', 100)"
+    "from bs4 import BeautifulSoup\n",
+    "from tqdm.notebook import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "14b116d5-ec5e-4459-b737-ed7244d85790",
    "metadata": {},
    "outputs": [],
@@ -29,26 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f31b7a22-f496-4c2b-b6af-24e017a495a3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import glob"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "893b6017-c6e5-4a6e-b82a-630534e9e5bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Filing:\n",
-    "\"\"\"\n",
-    "Class to take care of filing each dataframe + additional functionality later on\n",
-    "\"\"\"\n",
+    "    # Class to take care of filing each dataframe + additional functionality later on\n",
     "    def __init__(self, season: str):\n",
     "\n",
     "        self.season = season\n",
@@ -58,15 +50,19 @@
     "\n",
     "        # Check to make sure if directories exist\n",
     "        for directory in (self.data_dir, self.season_dir, self.boxscores_dir):\n",
-    "            if not os.exists(directory):\n",
+    "            if not os.path.exists(directory):\n",
     "                os.mkdir(directory)\n",
     "\n",
     "\n",
-    "    def save_boxscore(self, df: pd.DataFrame, week_num: int) -> None:\n",
+    "    def save_boxscore(self, filename: str, df: pd.DataFrame) -> None:\n",
     "        \"\"\"\n",
     "        Saves boxscore as csv (later on can configure different formats)\n",
     "        Saves in form of away-home-week#.csv\n",
     "        \"\"\"\n",
+    "        fpath: str = os.path.join(self.boxscores_dir, filename)\n",
+    "        df.to_csv(fpath, index=False)\n",
+    "\n",
+    "        return\n",
     "\n",
     "\n",
     "        "
@@ -74,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ab2186d7-1656-4dfc-a0db-19e822aeb6ef",
    "metadata": {},
    "outputs": [],
@@ -85,6 +81,9 @@
     "\n",
     "        self.year: int = int(kwargs.get('year', 2022))\n",
     "        self.season: str = f'{self.year}-{self.year+1}'\n",
+    "\n",
+    "        # Initialize filing object\n",
+    "        self.filing = Filing(self.season)\n",
     "        \n",
     "        # Going to start with just regular season\n",
     "        self.week_pages = {\n",
@@ -94,18 +93,19 @@
     "\n",
     "        self.data_stats = DATA_STATS\n",
     "\n",
-    "    def get_week_boxscores(self, *, week: int):\n",
+    "    def get_week_boxscores(self, week: int, url: str):\n",
     "        \"\"\"\n",
-    "        Returns links to every boxscore for given week\n",
+    "        Returns every boxscore for given week and saves it to directory\n",
     "        \"\"\"\n",
     "\n",
     "        root_url: str = 'https://www.pro-football-reference.com/'\n",
     "        \n",
     "        # Seems a little redundant having self.week_pages rn\n",
     "        week_games_soup = BeautifulSoup(\n",
-    "            requests.get(self.week_pages[week]).text,\n",
+    "            requests.get(url).text,\n",
     "            'html.parser'\n",
     "        )\n",
+    "\n",
     "\n",
     "        for game in week_games_soup.find_all('div', class_='game_summary expanded nohover'):\n",
     "            \n",
@@ -115,138 +115,206 @@
     "                'html.parser'\n",
     "            )\n",
     "\n",
-    "        stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
+    "            stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
+    "    \n",
+    "            # Different for names because th not td\n",
+    "            names = [\n",
+    "                tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
+    "                if tag.get_text() != 'Player'\n",
+    "            ]\n",
+    "            \n",
+    "            table_data = {\n",
+    "                stat: [td.get_text() for td in stat_table.find_all('td', attrs={'data-stat': stat})]\n",
+    "                for stat in DATA_STATS[1:]\n",
+    "            }\n",
+    "            \n",
+    "            \n",
+    "            # Will do rest of cleaning later on, just wanted to not have any NA values in saved files\n",
+    "            fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
+    "            table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
+    "            \n",
+    "            df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
     "\n",
-    "        # Different for names because th not td\n",
-    "        names = [\n",
-    "            tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
-    "            if tag.get_text() != 'Player'\n",
-    "        ]\n",
-    "        \n",
-    "        table_data = {\n",
-    "            stat: [td.get_text() for td in stat_table.find_all('td', attrs={'data-stat': stat})]\n",
-    "            for stat in DATA_STATS[1:]\n",
-    "        }\n",
-    "        \n",
-    "        \n",
-    "        # Will do rest of cleaning later on, just wanted to not have any NA values\n",
-    "        fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
-    "        table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
-    "        \n",
-    "        df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
-    "        teams = tuple(sorted(list(df['team'].drop_duplicates())))\n",
+    "            teams = sorted(list(df['team'].drop_duplicates()))\n",
+    "            filename = f'{\"-\".join(teams)}-week{week}'\n",
+    "\n",
+    "            self.filing.save_boxscore(filename, df)\n",
     "        \n",
     "\n",
-    "        return \n",
+    "        return\n",
+    "\n",
+    "    def get_season_boxscores(self) -> None:\n",
+    "        \"\"\"\n",
+    "        Iterates through every boxscore for every game of every week\n",
+    "        Saves to data directory\n",
+    "        \"\"\"\n",
+    "\n",
+    "        for weeknum, url in tqdm(self.week_pages.items()):\n",
+    "            print(f'Scraping boxscores for Week {weeknum}')\n",
+    "            self.get_week_boxscores(weeknum, url)\n",
+    "            # Need to sleep for 60 seconds so requests do not get blocked\n",
+    "            time.sleep(60)\n",
+    "            print(f'Succesfully scraped boxscores for Week {weeknum}\\n')\n",
+    "        \n",
+    "        \n",
+    "        return\n",
+    "        \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "85c93563-0ad5-47e6-8cc8-829ad39c1467",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# scraper = BoxscoreScraper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0248d2d-d3ec-44bb-82c0-00e5f888882b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# scraper.get_week_boxscores(week=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "e46405f5-9f97-4a21-b817-c3fda9f29a5e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Josh Allen', 'Devin Singletary', 'Zack Moss', 'James Cook', 'Stefon Diggs', 'Gabriel Davis', 'Jamison Crowder', 'Isaiah McKenzie', 'Dawson Knox', 'Matthew Stafford', 'Darrell Henderson', 'Brandon Powell', 'Cooper Kupp', 'Tyler Higbee', 'Ben Skowronek', 'Allen Robinson', 'Cam Akers', 'Tutu Atwell']\n"
-     ]
-    }
-   ],
-   "source": [
-    "week_games_soup = BeautifulSoup(\n",
-    "    requests.get('https://www.pro-football-reference.com/years/2022/week_1.htm').text,\n",
-    "    'html.parser'\n",
-    ")\n",
-    "\n",
-    "root_url: str = 'https://www.pro-football-reference.com/'\n",
-    "\n",
-    "for game in week_games_soup.find_all('div', class_='game_summary expanded nohover')[:1]:\n",
-    "    game_url: str = f\"{root_url}{game.find_all('td', class_='right gamelink')[0].find('a')['href']}\"\n",
-    "    game_soup = BeautifulSoup(\n",
-    "        requests.get(game_url).text,\n",
-    "        'html.parser'\n",
-    "    )\n",
-    "\n",
-    "    stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
-    "\n",
-    "    # Different for names because th not td\n",
-    "    names = [\n",
-    "        tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
-    "        if tag.get_text() != 'Player'\n",
-    "    ]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "c42a6573-6d9d-4237-9471-5b6001de0408",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8605b413be6a4bf396f246cf59a59044",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "('BUF', 'LAR')"
+       "  0%|          | 0/18 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 34,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scraping boxscores for Week 1\n",
+      "Succesfully scraped boxscores for Week 1\n",
+      "\n",
+      "Scraping boxscores for Week 2\n",
+      "Succesfully scraped boxscores for Week 2\n",
+      "\n",
+      "Scraping boxscores for Week 3\n",
+      "Succesfully scraped boxscores for Week 3\n",
+      "\n",
+      "Scraping boxscores for Week 4\n",
+      "Succesfully scraped boxscores for Week 4\n",
+      "\n",
+      "Scraping boxscores for Week 5\n",
+      "Succesfully scraped boxscores for Week 5\n",
+      "\n",
+      "Scraping boxscores for Week 6\n",
+      "Succesfully scraped boxscores for Week 6\n",
+      "\n",
+      "Scraping boxscores for Week 7\n",
+      "Succesfully scraped boxscores for Week 7\n",
+      "\n",
+      "Scraping boxscores for Week 8\n",
+      "Succesfully scraped boxscores for Week 8\n",
+      "\n",
+      "Scraping boxscores for Week 9\n",
+      "Succesfully scraped boxscores for Week 9\n",
+      "\n",
+      "Scraping boxscores for Week 10\n",
+      "Succesfully scraped boxscores for Week 10\n",
+      "\n",
+      "Scraping boxscores for Week 11\n",
+      "Succesfully scraped boxscores for Week 11\n",
+      "\n",
+      "Scraping boxscores for Week 12\n",
+      "Succesfully scraped boxscores for Week 12\n",
+      "\n",
+      "Scraping boxscores for Week 13\n",
+      "Succesfully scraped boxscores for Week 13\n",
+      "\n",
+      "Scraping boxscores for Week 14\n",
+      "Succesfully scraped boxscores for Week 14\n",
+      "\n",
+      "Scraping boxscores for Week 15\n",
+      "Succesfully scraped boxscores for Week 15\n",
+      "\n",
+      "Scraping boxscores for Week 16\n",
+      "Succesfully scraped boxscores for Week 16\n",
+      "\n",
+      "Scraping boxscores for Week 17\n",
+      "Succesfully scraped boxscores for Week 17\n",
+      "\n",
+      "Scraping boxscores for Week 18\n",
+      "Succesfully scraped boxscores for Week 18\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "## Get jailed for an hour if >= 20 requests / minute\n",
+    "scraper = BoxscoreScraper()\n",
+    "scraper.get_season_boxscores()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e46405f5-9f97-4a21-b817-c3fda9f29a5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# week_games_soup = BeautifulSoup(\n",
+    "#     requests.get('https://www.pro-football-reference.com/years/2022/week_1.htm').text,\n",
+    "#     'html.parser'\n",
+    "# )\n",
     "\n",
-    "single_url = 'https://www.pro-football-reference.com/boxscores/202209080ram.htm'\n",
+    "# root_url: str = 'https://www.pro-football-reference.com/'\n",
     "\n",
-    "game_soup = BeautifulSoup(\n",
-    "    # requests.get(game_url).text,\n",
-    "    requests.get(single_url).text,\n",
-    "    'html.parser'\n",
-    ")\n",
+    "# for game in week_games_soup.find_all('div', class_='game_summary expanded nohover')[:1]:\n",
+    "#     game_url: str = f\"{root_url}{game.find_all('td', class_='right gamelink')[0].find('a')['href']}\"\n",
+    "#     game_soup = BeautifulSoup(\n",
+    "#         requests.get(game_url).text,\n",
+    "#         'html.parser'\n",
+    "#     )\n",
     "\n",
-    "stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
+    "#     stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
     "\n",
-    "# Different for names because th not td\n",
-    "names = [\n",
-    "    tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
-    "    if tag.get_text() != 'Player'\n",
-    "]\n",
+    "#     # Different for names because th not td\n",
+    "#     names = [\n",
+    "#         tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
+    "#         if tag.get_text() != 'Player'\n",
+    "#     ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c42a6573-6d9d-4237-9471-5b6001de0408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ## Get jailed for an hour if >= 20 requests / minute\n",
     "\n",
-    "table_data = {\n",
-    "    stat: [td.get_text() for td in stat_table.find_all('td', attrs={'data-stat': stat})]\n",
-    "    for stat in DATA_STATS[1:]\n",
-    "}\n",
+    "# single_url = 'https://www.pro-football-reference.com/boxscores/202209080ram.htm'\n",
+    "\n",
+    "# game_soup = BeautifulSoup(\n",
+    "#     # requests.get(game_url).text,\n",
+    "#     requests.get(single_url).text,\n",
+    "#     'html.parser'\n",
+    "# )\n",
+    "\n",
+    "# stat_table = game_soup.find_all('table', id='player_offense')[0]\n",
+    "\n",
+    "# # Different for names because th not td\n",
+    "# names = [\n",
+    "#     tag.get_text() for tag in stat_table.find_all('th', attrs={'data-stat': 'player'})\n",
+    "#     if tag.get_text() != 'Player'\n",
+    "# ]\n",
+    "\n",
+    "# table_data = {\n",
+    "#     stat: [td.get_text() for td in stat_table.find_all('td', attrs={'data-stat': stat})]\n",
+    "#     for stat in DATA_STATS[1:]\n",
+    "# }\n",
     "\n",
     "\n",
-    "# Will do rest of cleaning later on, just wanted to not have any NA values\n",
-    "fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
-    "table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
+    "# # Will do rest of cleaning later on, just wanted to not have any NA values\n",
+    "# fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
+    "# table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
     "\n",
-    "df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
-    "teams = tuple(sorted(list(df['team'].drop_duplicates())))"
+    "# df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
+    "# teams = tuple(sorted(list(df['team'].drop_duplicates())))"
    ]
   },
   {
@@ -280,8 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# rows[:21]\n",
-    "stat_table.find_all('td', attrs={'data-stat': 'team'})"
+    "# stat_table.find_all('td', attrs={'data-stat': 'team'})"
    ]
   },
   {
@@ -293,12 +360,12 @@
    "source": [
     "\n",
     "\n",
-    "table_data_with_names = {\n",
-    "    **{'name': names},\n",
-    "    **table_data\n",
-    "}\n",
+    "# table_data_with_names = {\n",
+    "#     **{'name': names},\n",
+    "#     **table_data\n",
+    "# }\n",
     "\n",
-    "pd.DataFrame(data = table_data_with_names)"
+    "# pd.DataFrame(data = table_data_with_names)"
    ]
   },
   {
