fixed naming issues and file formatting

--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -59,7 +59,7 @@
     "        Saves boxscore as csv (later on can configure different formats)\n",
     "        Saves in form of away-home-week#.csv\n",
     "        \"\"\"\n",
-    "        fpath: str = os.path.join(self.boxscores_dir, filename)\n",
+    "        fpath: str = os.path.join(self.boxscores_dir, f'{filename}.csv')\n",
     "        df.to_csv(fpath, index=False)\n",
     "\n",
     "        return\n",
@@ -129,13 +129,14 @@
     "            }\n",
     "            \n",
     "            \n",
-    "            # Will do rest of cleaning later on, just wanted to not have any NA values in saved files\n",
+    "            # Will do rest of cleaning later on, just wanted to not have any NA values in saved files and have standardized team names\n",
     "            fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
     "            table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
+    "            table_data[]\n",
     "            \n",
     "            df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
     "\n",
-    "            teams = sorted(list(df['team'].drop_duplicates()))\n",
+    "            teams = [convert.initials(team) for team in sorted(list(df['team'].drop_duplicates()))]\n",
     "            filename = f'{\"-\".join(teams)}-week{week}'\n",
     "\n",
     "            self.filing.save_boxscore(filename, df)\n",
