improved team corrections

--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -132,11 +132,11 @@
     "            # Will do rest of cleaning later on, just wanted to not have any NA values in saved files and have standardized team names\n",
     "            fix_rating = lambda rating_str: float(rating_str) if len(rating_str) else 0.0\n",
     "            table_data['pass_rating'] = [fix_rating(rating) for rating in table_data['pass_rating']]\n",
-    "            table_data[]\n",
+    "            table_data['team'] = [convert.initials(team) for team in table_data['team']]\n",
     "            \n",
     "            df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
     "\n",
-    "            teams = [convert.initials(team) for team in sorted(list(df['team'].drop_duplicates()))]\n",
+    "            teams = sorted(list(df['team'].drop_duplicates()))\n",
     "            filename = f'{\"-\".join(teams)}-week{week}'\n",
     "\n",
     "            self.filing.save_boxscore(filename, df)\n",
