--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -54,12 +54,14 @@
     "                os.mkdir(directory)\n",
     "\n",
     "\n",
-    "    def save_boxscore(self, filename: str, df: pd.DataFrame) -> None:\n",
+    "    def save_boxscore(self, df: pd.DataFrame) -> None:\n",
     "        \"\"\"\n",
     "        Saves boxscore as csv (later on can configure different formats)\n",
     "        Saves in form of away-home-week#.csv\n",
     "        \"\"\"\n",
-    "        fpath: str = os.path.join(self.boxscores_dir, f'{filename}.csv')\n",
+    "        teams = sorted(list(df['team'].drop_duplicates()))\n",
+    "        filename = f'{\"-\".join(teams)}-week{week}.csv'\n",
+    "        fpath: str = os.path.join(self.boxscores_dir, filename)\n",
     "        df.to_csv(fpath, index=False)\n",
     "\n",
     "        return\n",
@@ -136,10 +138,9 @@
     "            \n",
     "            df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
     "\n",
-    "            teams = sorted(list(df['team'].drop_duplicates()))\n",
-    "            filename = f'{\"-\".join(teams)}-week{week}'\n",
+    "            \n",
     "\n",
-    "            self.filing.save_boxscore(filename, df)\n",
+    "            self.filing.save_boxscore(df)\n",
     "        \n",
     "\n",
     "        return\n",
