fixed minor issues with file naming and formatting

--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -48,20 +48,21 @@
     "        self.season_dir = os.path.join(self.data_dir, season)\n",
     "        self.boxscores_dir = os.path.join(self.season_dir, 'boxscores')\n",
     "\n",
-    "        # Check to make sure if directories exist\n",
+    "        # Check to make sure if directories exist, if not create them\n",
     "        for directory in (self.data_dir, self.season_dir, self.boxscores_dir):\n",
     "            if not os.path.exists(directory):\n",
     "                os.mkdir(directory)\n",
     "\n",
     "\n",
-    "    def save_boxscore(self, df: pd.DataFrame) -> None:\n",
+    "    def save_boxscore(self, df: pd.DataFrame, weeknum: int) -> None:\n",
     "        \"\"\"\n",
     "        Saves boxscore as csv (later on can configure different formats)\n",
     "        Saves in form of away-home-week#.csv\n",
     "        \"\"\"\n",
     "        teams = sorted(list(df['team'].drop_duplicates()))\n",
-    "        filename = f'{\"-\".join(teams)}-week{week}.csv'\n",
-    "        fpath: str = os.path.join(self.boxscores_dir, filename)\n",
+    "        filename = f'{\"-\".join(teams)}-week{weeknum}.csv'\n",
+    "        \n",
+    "        fpath = os.path.join(self.boxscores_dir, filename)\n",
     "        df.to_csv(fpath, index=False)\n",
     "\n",
     "        return\n",
@@ -137,10 +138,7 @@
     "            table_data['team'] = [convert.initials(team) for team in table_data['team']]\n",
     "            \n",
     "            df = pd.DataFrame(data={**{'name': names}, **table_data})\n",
-    "\n",
-    "            \n",
-    "\n",
-    "            self.filing.save_boxscore(df)\n",
+    "            self.filing.save_boxscore(df, week)\n",
     "        \n",
     "\n",
     "        return\n",
@@ -173,7 +171,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8605b413be6a4bf396f246cf59a59044",
+       "model_id": "cb19ee76877344c49b1887684f49ee2f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,60 +186,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scraping boxscores for Week 1\n",
-      "Succesfully scraped boxscores for Week 1\n",
-      "\n",
-      "Scraping boxscores for Week 2\n",
-      "Succesfully scraped boxscores for Week 2\n",
-      "\n",
-      "Scraping boxscores for Week 3\n",
-      "Succesfully scraped boxscores for Week 3\n",
-      "\n",
-      "Scraping boxscores for Week 4\n",
-      "Succesfully scraped boxscores for Week 4\n",
-      "\n",
-      "Scraping boxscores for Week 5\n",
-      "Succesfully scraped boxscores for Week 5\n",
-      "\n",
-      "Scraping boxscores for Week 6\n",
-      "Succesfully scraped boxscores for Week 6\n",
-      "\n",
-      "Scraping boxscores for Week 7\n",
-      "Succesfully scraped boxscores for Week 7\n",
-      "\n",
-      "Scraping boxscores for Week 8\n",
-      "Succesfully scraped boxscores for Week 8\n",
-      "\n",
-      "Scraping boxscores for Week 9\n",
-      "Succesfully scraped boxscores for Week 9\n",
-      "\n",
-      "Scraping boxscores for Week 10\n",
-      "Succesfully scraped boxscores for Week 10\n",
-      "\n",
-      "Scraping boxscores for Week 11\n",
-      "Succesfully scraped boxscores for Week 11\n",
-      "\n",
-      "Scraping boxscores for Week 12\n",
-      "Succesfully scraped boxscores for Week 12\n",
-      "\n",
-      "Scraping boxscores for Week 13\n",
-      "Succesfully scraped boxscores for Week 13\n",
-      "\n",
-      "Scraping boxscores for Week 14\n",
-      "Succesfully scraped boxscores for Week 14\n",
-      "\n",
-      "Scraping boxscores for Week 15\n",
-      "Succesfully scraped boxscores for Week 15\n",
-      "\n",
-      "Scraping boxscores for Week 16\n",
-      "Succesfully scraped boxscores for Week 16\n",
-      "\n",
-      "Scraping boxscores for Week 17\n",
-      "Succesfully scraped boxscores for Week 17\n",
-      "\n",
-      "Scraping boxscores for Week 18\n",
-      "Succesfully scraped boxscores for Week 18\n",
-      "\n"
+      "Scraping boxscores for Week 1\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'week' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m scraper \u001b[38;5;241m=\u001b[39m BoxscoreScraper()\n\u001b[0;32m----> 2\u001b[0m \u001b[43mscraper\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_season_boxscores\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[4], line 74\u001b[0m, in \u001b[0;36mBoxscoreScraper.get_season_boxscores\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m weeknum, url \u001b[38;5;129;01min\u001b[39;00m tqdm(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweek_pages\u001b[38;5;241m.\u001b[39mitems()):\n\u001b[1;32m     73\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mScraping boxscores for Week \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mweeknum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 74\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_week_boxscores\u001b[49m\u001b[43m(\u001b[49m\u001b[43mweeknum\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     75\u001b[0m     \u001b[38;5;66;03m# Need to sleep for 60 seconds so requests do not get blocked\u001b[39;00m\n\u001b[1;32m     76\u001b[0m     time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m60\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 61\u001b[0m, in \u001b[0;36mBoxscoreScraper.get_week_boxscores\u001b[0;34m(self, week, url)\u001b[0m\n\u001b[1;32m     58\u001b[0m     table_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteam\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m [convert\u001b[38;5;241m.\u001b[39minitials(team) \u001b[38;5;28;01mfor\u001b[39;00m team \u001b[38;5;129;01min\u001b[39;00m table_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteam\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[1;32m     60\u001b[0m     df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(data\u001b[38;5;241m=\u001b[39m{\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m: names}, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mtable_data})\n\u001b[0;32m---> 61\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfiling\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_boxscore\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     64\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[3], line 22\u001b[0m, in \u001b[0;36mFiling.save_boxscore\u001b[0;34m(self, df)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;124;03mSaves boxscore as csv (later on can configure different formats)\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;124;03mSaves in form of away-home-week#.csv\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     21\u001b[0m teams \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mteam\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mdrop_duplicates()))\n\u001b[0;32m---> 22\u001b[0m filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(teams)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m-week\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43mweek\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     24\u001b[0m fpath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mboxscores_dir, filename)\n\u001b[1;32m     25\u001b[0m df\u001b[38;5;241m.\u001b[39mto_csv(fpath, index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'week' is not defined"
      ]
     }
    ],
