--- a/src/interactive.ipynb
+++ b/src/interactive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "84b73067-7a33-4bd7-a56c-5fcc133a1a94",
    "metadata": {},
    "outputs": [],
@@ -12,27 +12,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "860bb20c-1738-41a7-b322-db3c172e8b22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "scraper = BoxscoreScraper(year=2022)"
+    "scraper = BoxscoreScraper(year=2023)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "187b0177-33fa-4f11-8f39-510a41216ce5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Beginning scraping for 2023-2024 season\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ef52a66135fa44dc8c5766453314417f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scraping boxscores for Week 1\n",
+      "Succesfully scraped boxscores for Week 1\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "scraper.get_season_boxscores()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ee6924a4-547f-4d97-87d1-ada3a44b5177",
    "metadata": {},
    "outputs": [],
@@ -63,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "abc13c7a-a90a-4784-8262-ed7191809bf2",
    "metadata": {},
    "outputs": [],
@@ -73,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "3ae70c8e-b4e7-4b48-aa45-6ba0657ac18b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "859d604e-012a-42f6-957c-3d9aecc6625e",
    "metadata": {},
    "outputs": [
@@ -139,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "418e596b-cd2d-4fb3-9854-70d12e3803b8",
    "metadata": {},
    "outputs": [],
@@ -149,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "9fdeb0a9-41e9-4aac-885a-fee1170bf203",
    "metadata": {},
    "outputs": [
@@ -159,7 +191,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -188,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "ecd561e5-c9ab-444b-8f3d-bd2c7f6d7160",
    "metadata": {},
    "outputs": [],
@@ -209,22 +241,20 @@
     "\n",
     "team_cores = {\n",
     "    'MIN': [\n",
-    "        'Justin Jefferson',\n",
-    "        'Dalvin Cook',\n",
-    "        'TJ Hockenson',\n",
-    "        'Kirk Cousins',\n",
-    "        'KJ Osborn',\n",
-    "        # 'Adam Thielen'\n",
+    "        'Tyreek Hill',\n",
+    "        'Tua Tagovailoa',\n",
+    "        'Jaylen Waddle',\n",
+    "        'Raheem Mostert'\n",
+    "        \n",
     "    ],\n",
     "\n",
-    "    'PHI': [\n",
-    "        'Jalen Hurts',\n",
-    "        'DeVonta Smith',\n",
-    "        'AJ Brown',\n",
-    "        'Miles Sanders',\n",
-    "        'Dallas Goedert',\n",
-    "        'Quez Watkins',\n",
-    "        # 'Boston Scott'\n",
+    "    'NE': [\n",
+    "        'Mac Jones',\n",
+    "        'Rhamondre Stevenson',\n",
+    "        'Kendrick Bourne',\n",
+    "        # 'JuJu Smith-Schuster'\n",
+    "        'DeVante Parker'\n",
+    "\n",
     "    ]\n",
     "}\n",
     "team_dfs = {\n",
@@ -275,9 +305,34 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "4610b620-9e4b-4fa9-9cd2-5b52e981c4c3",
+   "id": "f7ac0084-8f0f-48c1-8113-6dd90e1bd5ac",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "agg_stats = ['mean']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4610b620-9e4b-4fa9-9cd2-5b52e981c4c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "x and y must have length at least 2.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_41944/1855711156.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m team_combo_corrs = {\n\u001b[0m\u001b[1;32m      2\u001b[0m     team: dict(sorted({\n\u001b[1;32m      3\u001b[0m         \u001b[0mcombo\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpearsonr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcombo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_cores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_41944/1855711156.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m team_combo_corrs = {\n\u001b[0;32m----> 2\u001b[0;31m     team: dict(sorted({\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mcombo\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpearsonr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcombo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_cores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     }.items(), key=lambda item: item[1], reverse=True))\n",
+      "\u001b[0;32m/tmp/ipykernel_41944/1855711156.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      2\u001b[0m team_combo_corrs = {\n\u001b[0;32m----> 3\u001b[0;31m     team: dict(sorted({\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mcombo\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpearsonr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcore_fpts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcombo\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcombo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mitertools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mteam_cores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mteam\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     }.items(), key=lambda item: item[1], reverse=True))\n",
+      "\u001b[0;32m/usr/lib/python3.11/site-packages/scipy/stats/_stats_py.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(x, y, alternative, method)\u001b[0m\n\u001b[1;32m   4764\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4765\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'x and y must have the same length.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4766\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4767\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4768\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'x and y must have length at least 2.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4769\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4770\u001b[0m     \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4771\u001b[0m     \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: x and y must have length at least 2."
+     ]
+    }
+   ],
    "source": [
     "team_combo_corrs = {\n",
     "    team: dict(sorted({\n",
@@ -290,63 +345,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "f23f6582-1f3a-4eb9-8e93-3d74ce63db1d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{('Justin Jefferson', 'Kirk Cousins'): 0.784,\n",
-       " ('Justin Jefferson', 'Dalvin Cook'): 0.609,\n",
-       " ('Dalvin Cook', 'Kirk Cousins'): 0.525,\n",
-       " ('Kirk Cousins', 'KJ Osborn'): 0.46,\n",
-       " ('Justin Jefferson', 'TJ Hockenson'): 0.391,\n",
-       " ('Dalvin Cook', 'KJ Osborn'): 0.343,\n",
-       " ('TJ Hockenson', 'Kirk Cousins'): 0.307,\n",
-       " ('Justin Jefferson', 'KJ Osborn'): -0.044,\n",
-       " ('Dalvin Cook', 'TJ Hockenson'): -0.113,\n",
-       " ('TJ Hockenson', 'KJ Osborn'): -0.375}"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'team_combo_corrs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[44], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mteam_combo_corrs\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMIA\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'team_combo_corrs' is not defined"
+     ]
     }
    ],
    "source": [
-    "team_combo_corrs['MIN']"
+    "team_combo_corrs['MIA']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "b106f751-a092-40b2-beed-7ddd61c59161",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{('Jalen Hurts', 'Quez Watkins'): 0.747,\n",
-       " ('AJ Brown', 'Miles Sanders'): 0.61,\n",
-       " ('Jalen Hurts', 'DeVonta Smith'): 0.305,\n",
-       " ('Miles Sanders', 'Dallas Goedert'): 0.265,\n",
-       " ('Jalen Hurts', 'Miles Sanders'): 0.254,\n",
-       " ('Jalen Hurts', 'Dallas Goedert'): 0.235,\n",
-       " ('DeVonta Smith', 'Quez Watkins'): 0.134,\n",
-       " ('Dallas Goedert', 'Quez Watkins'): 0.104,\n",
-       " ('AJ Brown', 'Dallas Goedert'): -0.037,\n",
-       " ('Miles Sanders', 'Quez Watkins'): -0.147,\n",
-       " ('Jalen Hurts', 'AJ Brown'): -0.396,\n",
-       " ('DeVonta Smith', 'AJ Brown'): -0.461,\n",
-       " ('DeVonta Smith', 'Miles Sanders'): -0.461,\n",
-       " ('AJ Brown', 'Quez Watkins'): -0.515,\n",
-       " ('DeVonta Smith', 'Dallas Goedert'): -0.596}"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'team_combo_corrs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[42], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mteam_combo_corrs\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPHI\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'team_combo_corrs' is not defined"
+     ]
     }
    ],
    "source": [
@@ -355,29 +389,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3a7772c2-49f7-4315-bf7b-dcb3a790a778",
+   "execution_count": 43,
+   "id": "e797509a-0b90-4960-bbb8-2135a248a25e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# agg_df = (df\n",
-    "#           .groupby('opp')\n",
-    "#           [agg_stats]\n",
-    "#           .agg(['sum'])\n",
-    "#           .reset_index()\n",
-    "#           .set_axis(['opp'] + agg_stats, axis=1)\n",
-    "#           .pipe(lambda df_: df_.loc[df_['opp'].isin(teams)])\n",
-    "#           .set_index('opp')\n",
-    "#           .assign(\n",
-    "#               total_yds=lambda df_: df_.rush_yds + df_.rec_yds,\n",
-    "#               total_td=lambda df_: df_.rush_td + df_.rec_td \n",
-    "#           )\n",
-    "#          )"
+    "agg_stats = ['rush_yds', 'rush_td', 'rec_yds', 'rec_td']\n",
+    "teams = ['NE', 'MIA']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "3a7772c2-49f7-4315-bf7b-dcb3a790a778",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rush_yds</th>\n",
+       "      <th>rush_td</th>\n",
+       "      <th>rec_yds</th>\n",
+       "      <th>rec_td</th>\n",
+       "      <th>total_yds</th>\n",
+       "      <th>total_td</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>opp</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MIA</th>\n",
+       "      <td>233</td>\n",
+       "      <td>3</td>\n",
+       "      <td>229</td>\n",
+       "      <td>1</td>\n",
+       "      <td>462</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NE</th>\n",
+       "      <td>97</td>\n",
+       "      <td>0</td>\n",
+       "      <td>170</td>\n",
+       "      <td>1</td>\n",
+       "      <td>267</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rush_yds  rush_td  rec_yds  rec_td  total_yds  total_td\n",
+       "opp                                                         \n",
+       "MIA       233        3      229       1        462         4\n",
+       "NE         97        0      170       1        267         1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agg_df = (df\n",
+    "          .groupby('opp')\n",
+    "          [agg_stats]\n",
+    "          .agg(['sum'])\n",
+    "          .reset_index()\n",
+    "          .set_axis(['opp'] + agg_stats, axis=1)\n",
+    "          .pipe(lambda df_: df_.loc[df_['opp'].isin(teams)])\n",
+    "          .set_index('opp')\n",
+    "          .assign(\n",
+    "              total_yds=lambda df_: df_.rush_yds + df_.rec_yds,\n",
+    "              total_td=lambda df_: df_.rush_td + df_.rec_td \n",
+    "          )\n",
+    "         )\n",
+    "agg_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "b413eb88-9b6f-4947-914a-69003f1c2fd6",
    "metadata": {},
    "outputs": [],
